--- a/qtum/src/qt/res/styles/treeview.css
+++ b/qtum/src/qt/res/styles/treeview.css
@@ -8,7 +8,7 @@ QTreeWidget {
 }
 QTreeView{
     color: #C5C5C5;
-    background-color: #2e2e2e;
+    background-color: #f4f4f4;
     alternate-background-color: #393939;
     border: none;
     font: normal;
@@ -37,7 +37,7 @@ QScrollBar:vertical {
 }
 QScrollBar::handle:vertical {
     border: none;
-    background: #2e2e2e;
+    background: #f4f4f4;
     border-radius: 4px;
     min-height: 35px;
 }
@@ -52,7 +52,7 @@ QScrollBar:horizontal {
 }
 QScrollBar::handle:horizontal {
     border: none;
-    background: #2e2e2e;
+    background: #f4f4f4;
     border-radius: 4px;
     min-width: 35px;
 }
