--- a/src/qt/res/styles/buttonblack.css
+++ b/src/qt/res/styles/buttonblack.css
@@ -3,7 +3,7 @@ Button Black CSS
 --------------------------------------------*/
 QPushButton {
     color: white; 
-    background: #f4f4f4;
+    background: #575757;
     border: 1px solid #2d2d2e;
     border-radius: 12px;
     padding: 6px;
