--- a/src/qt/res/styles/scrollbardark.css
+++ b/src/qt/res/styles/scrollbardark.css
@@ -11,7 +11,7 @@ QScrollBar:vertical {
 }
 QScrollBar::handle:vertical {
     border: none;
-    background: #2e2e2e;
+    background: #f4f4f4;
     border-radius: 5px;
     min-height: 30px;
 }
@@ -26,7 +26,7 @@ QScrollBar:horizontal {
 }
 QScrollBar::handle:horizontal {
     border: none;
-    background: #2e2e2e;
+    background: #f4f4f4;
     border-radius: 4px;
     min-width: 35px;
 }
