change panel color

--- a/src/qt/res/styles/app.css
+++ b/src/qt/res/styles/app.css
@@ -33,7 +33,7 @@ QMainWindow .QFrame#frameBalances,
     background-color: #999999;
 }
 QMainWindow .QFrame#frameContract{
-    background-color: #2a2a2a;
+    background-color: #d1d1d1;
 }
 QFrame#hLine,
 #hLine2,
@@ -52,10 +52,10 @@ QDialog{
     background-color: #d1d1d1;
 }
 QLabel{
-    color: #000000;
+    color: #d1d1d1;
 }
 QLabel::disabled{
-    color: rgba(255, 255, 255, 10%);
+    color: #5c5b5b;
 }
 QLabel#labelTotal,
 #labelWatchTotal,
@@ -77,7 +77,7 @@ Line Edit CSS
 QLineEdit{
     border: 1px solid #5a5a5d;
     border-radius: 12px;
-    background-color: #282828;
+    background-color: #d1d1d1;
     color: #bdbdbd;
     padding: 4px;
 }
@@ -122,7 +122,7 @@ Combo Box CSS
 QComboBox {
     border: 1px solid #5a5a5d;
     border-radius: 12px;
-    background-color: #2a2a2a;
+    background-color: #d1d1d1;
     color: #000000;
     padding: 4px;
     padding-left: 10px;
@@ -251,7 +251,7 @@ Spin Box CSS
 --------------------------------------------*/
 QAbstractSpinBox {
     padding: 4px;
-    background-color: #282828;
+    background-color: #d1d1d1;
     background-position: right;
     background-repeat: no-repeat;
     border: 1px solid #5a5a5d;
@@ -513,7 +513,7 @@ QTextEdit CSS
 QTextEdit {
     border: 1px solid #5a5a5d;
     border-radius: 12px;
-    background-color: #282828;
+    background-color: #d1d1d1;
     color: #bdbdbd;
     padding-left: 5px;
 }
@@ -533,7 +533,7 @@ QPlainTextEdit CSS
 QPlainTextEdit {
     border: 1px solid #5a5a5d;
     border-radius: 12px;
-    background-color: #282828;
+    background-color: #d1d1d1;
     color: #bdbdbd;
     padding-left: 5px;
 }
