--- a/src/qt/res/styles/toolblack.css
+++ b/src/qt/res/styles/toolblack.css
@@ -3,14 +3,16 @@ Tool Button Black CSS
 --------------------------------------------*/
 QToolButton {
     color: rgba(255, 255, 255, 60%);
-    background: rgba(45, 45, 45, 85%);
+    /* background: rgba(45, 45, 45, 85%); */
+    background: #d1d1d1;
     border: 0px solid transparent;
     border-radius: 0px;
     padding: 10px;
 }
 QToolButton:pressed, QToolButton:hover:pressed, QToolButton:checked {
     color: rgba(255, 255, 255, 85%);
-    background: rgba(0, 158, 229, 85%);
+    /* background: rgba(0, 158, 229, 85%); */
+    background: #4857e1;
 }
 QToolButton:hover:!checked {
     color: rgba(45, 45, 45, 85%);
