--- a/src/qt/res/styles/app.css
+++ b/src/qt/res/styles/app.css
@@ -8,7 +8,7 @@ QWidget{
 Main Window CSS
 --------------------------------------------*/
 QMainWindow{
-    background-color: #bcbcbc;
+    background-color: #1f1f1f;
     border: 0px solid transparent;
     background-image: url(":/styles/app-icons/bg");
     background-position: bottom left;
@@ -30,10 +30,10 @@ QMainWindow .QFrame#frameBalances,
 #frameOtherTokens, 
 #frameRecentTransactions,
 #frameRequest{
-    background-color: #999999;
+    background-color: #2e2e2e;
 }
 QMainWindow .QFrame#frameContract{
-    background-color: #d1d1d1;
+    background-color: #2a2a2a;
 }
 QFrame#hLine,
 #hLine2,
@@ -46,16 +46,16 @@ QFrame#vLine,
     border-left: 1px solid #404041;
 }
 WalletFrame{
-    background-color: #d1d1d1;
+    background-color: #272727;
 }
 QDialog{
-    background-color: #d1d1d1;
+    background-color: #272727;
 }
 QLabel{
-    color: #d1d1d1;
+    color: #ffffff;
 }
 QLabel::disabled{
-    color: #5c5b5b;
+    color: rgba(255, 255, 255, 10%);
 }
 QLabel#labelTotal,
 #labelWatchTotal,
@@ -63,7 +63,7 @@ QLabel#labelTotal,
 #labelNetwork,
 #labelBlockChain,
 #labelMempoolTitle{
-    color: #4857e1;
+    color: #049ee8;
 }
 QLabel#overriddenByCommandLineLabel{
     color: #bdbdbd;
@@ -77,7 +77,7 @@ Line Edit CSS
 QLineEdit{
     border: 1px solid #5a5a5d;
     border-radius: 12px;
-    background-color: #d1d1d1;
+    background-color: #282828;
     color: #bdbdbd;
     padding: 4px;
 }
@@ -92,28 +92,28 @@ QLineEdit::disabled{
     color: rgba(150, 150, 150, 10%);
 }
 QAbstractItemView#autoCompleterPopup{
-    background-color: #999999;
+    background-color: #2e2e2e;
     border: none;
     padding: 4px;
 }
 QAbstractItemView#autoCompleterPopup::item{
     border: none;
     border-radius: 10px;
-    background-color: #999999;
-    color: #000000;
+    background-color: #2e2e2e;
+    color: #ffffff;
     padding: 4px;
     padding-left: 10px;
 }
 QAbstractItemView#autoCompleterPopup::item:selected {
     background-color: #545454;
-    color: #000000;
+    color: #ffffff;
     padding: 4px;
 }
 /*--------------------------------------------
 List Viev CSS
 --------------------------------------------*/
 QListView {
-    background-color: #999999;
+    background-color: #2e2e2e;
     border: none;
 }
 /*--------------------------------------------
@@ -122,8 +122,8 @@ Combo Box CSS
 QComboBox {
     border: 1px solid #5a5a5d;
     border-radius: 12px;
-    background-color: #d1d1d1;
-    color: #000000;
+    background-color: #2a2a2a;
+    color: #ffffff;
     padding: 4px;
     padding-left: 10px;
     padding-right: 8px;
@@ -146,21 +146,21 @@ QComboBox:down-arrow {
 QComboBox QAbstractItemView::item {
     border: none;
     border-radius: 10px;
-    background-color: #999999;
-    color: #000000;
+    background-color: #2e2e2e;
+    color: #ffffff;
     padding: 4px;
     padding-left: 10px;
 }
 QComboBox QAbstractItemView::item:selected {
     background-color: #545454;
-    color: #000000;
+    color: #ffffff;
     padding: 4px;
 }
 QComboBox QAbstractItemView{
-    background-color: #999999;
+    background-color: #2e2e2e;
     border: none;
-    border-top: 1px solid #d1d1d1;
-    border-bottom: 1px solid #d1d1d1;
+    border-top: 1px solid #727272;
+    border-bottom: 1px solid #727272;
     border-radius: 10px;
     padding: 4px;
     margin-top: 3px;
@@ -183,10 +183,10 @@ QGroupBox
 {
     border: 0px solid transparent; 
     margin-top: 20px;
-    background-color: #999999;
+    background-color: #2e2e2e;
 }
 QGroupBox::title {
-    color: #000000;
+    color: #ffffff;
     subcontrol-position: top left;
     left: -3px;
     padding: -40px 3px 0px 3px;
@@ -251,7 +251,7 @@ Spin Box CSS
 --------------------------------------------*/
 QAbstractSpinBox {
     padding: 4px;
-    background-color: #d1d1d1;
+    background-color: #282828;
     background-position: right;
     background-repeat: no-repeat;
     border: 1px solid #5a5a5d;
@@ -354,7 +354,7 @@ QScrollBar:vertical {
 }
 QScrollBar::handle:vertical {
     border: none;
-    background: #999999;
+    background: #2e2e2e;
     border-radius: 4px;
     min-height: 35px;
 }
@@ -371,7 +371,7 @@ QTextEdit QScrollBar:vertical {
 }
 QTextEdit QScrollBar::handle:vertical {
     border: none;
-    background: #999999;
+    background: #2e2e2e;
     border-radius: 5px;
     min-height: 30px;
 }
@@ -388,7 +388,7 @@ QPlainTextEdit QScrollBar:vertical {
 }
 QPlainTextEdit QScrollBar::handle:vertical {
     border: none;
-    background: #999999;
+    background: #2e2e2e;
     border-radius: 5px;
     min-height: 30px;
 }
@@ -403,7 +403,7 @@ QComboBox QScrollBar:vertical {
 }
 QComboBox QScrollBar::handle:vertical {
     border: none;
-    background: #999999;
+    background: #2e2e2e;
     border-radius: 4px;
     min-height: 35px;
 }
@@ -439,7 +439,7 @@ QScrollBar:horizontal {
 }
 QScrollBar::handle:horizontal {
     border: none;
-    background: #999999;
+    background: #2e2e2e;
     border-radius: 4px;
     min-width: 30px;
 }
@@ -457,7 +457,7 @@ QHeaderView{
 QHeaderView:section{
     padding: 6px 20px 6px 6px;
     border: none;
-    background-color: #999999;
+    background-color: #2e2e2e;
 }
 QHeaderView::down-arrow {
     image: url(":/styles/app-icons/down_arrow");
@@ -475,7 +475,7 @@ QHeaderView::up-arrow {
 }
 QTableView{
     color: #C5C5C5;
-    background-color: #999999;
+    background-color: #2e2e2e;
     alternate-background-color: #393939;
     border: none;
     font: normal;
@@ -513,7 +513,7 @@ QTextEdit CSS
 QTextEdit {
     border: 1px solid #5a5a5d;
     border-radius: 12px;
-    background-color: #d1d1d1;
+    background-color: #282828;
     color: #bdbdbd;
     padding-left: 5px;
 }
@@ -533,7 +533,7 @@ QPlainTextEdit CSS
 QPlainTextEdit {
     border: 1px solid #5a5a5d;
     border-radius: 12px;
-    background-color: #d1d1d1;
+    background-color: #282828;
     color: #bdbdbd;
     padding-left: 5px;
 }
@@ -573,8 +573,8 @@ QStatusBar QLabel::disabled{
 Progress Bar CSS
 --------------------------------------------*/
 QProgressBar {
-    background-color: #999999;
-    border: 1px solid #999999;
+    background-color: #2e2e2e;
+    border: 1px solid #2e2e2e;
     font: 10pt;
     color: white;
     border-radius: 0px;
@@ -614,7 +614,7 @@ QTabBar::tab:disabled {
 QTabWidget::pane {
     border: none;
     border-top: none;
-    background-color: #999999;
+    background-color: #2e2e2e;
 }
 TitleBar QTabBar::tab {
     padding: 5px 10px;
@@ -672,7 +672,7 @@ QCheckBox{
     outline-style: none;
 }
 QCheckBox:hover, QCheckBox:checked {
-    color: #000000;
+    color: #ffffff;
 }
 QCheckBox:disabled {
     color: rgba(255, 255, 255, 10%);
@@ -716,7 +716,7 @@ QRadioButton{
     outline-style: none;
 }
 QRadioButton:hover, QRadioButton:checked {
-    color: #000000;
+    color: #ffffff;
 }
 QRadioButton:disabled {
     color: rgba(255, 255, 255, 10%);
@@ -751,10 +751,10 @@ QWidget#buttonsContainer {
 }
 QWidget#buttonsContainerWhite,
 #buttonsContainerWhite_ {
-    background: #000000;
+    background: #ffffff;
 }
 QWidget#ReceiveRequestDialog {
-    background: #d1d1d1;
+    background: #272727;
 }
 QTextEdit#outUri {
     border: none;
@@ -816,7 +816,7 @@ QScrollArea {
     border:none;
 }
 QWidget#scrollAreaWidgetContents{
-    background: #999999;
+    background: #2e2e2e;
 }
 .ABIFunctionField{
 	background: transparent;
@@ -825,13 +825,13 @@ QWidget#scrollAreaWidgetContents{
 Debug Dialog CSS
 --------------------------------------------*/
 QWidget#RPCConsole{
-    background-color: #d1d1d1;
+    background-color: #272727;
 }
 /*--------------------------------------------
 Shut Down Window CSS
 --------------------------------------------*/
 QWidget#shutdownWindow{
-    background-color: #d1d1d1;
+    background-color: #272727;
 }
 /*--------------------------------------------
 Tool Button CSS
@@ -894,7 +894,7 @@ QCalendarWidget QAbstractItemView
 {
     background-color: #373535;
     alternate-background-color: #2E2C2C;
-    color: #000000;
+    color: #ffffff;
     padding-bottom:-1px;
 }
 QCalendarWidget QAbstractItemView:disabled {
